<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnboardActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="363dp"
        android:layout_height="365dp"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/onboardImage"
        android:src="@drawable/ic_man"
        app:layout_constraintBottom_toTopOf="@+id/onboardImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/onboardImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/heading_logo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_heading_logo" />

    <Button
        android:id="@+id/gsignupbtn"
        android:layout_width="341dp"
        android:layout_height="64dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/colorOnPrimary"
        android:textColorHighlight="@color/colorOnPrimary"
        android:textColorHint="@color/colorOnBackground"
        android:textColorLink="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/cornerRadius"
        app:layout_constraintBottom_toTopOf="@+id/signupBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/onboardMassage"
        app:layout_constraintBottom_toTopOf="@+id/gsignupbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="341dp"
        android:layout_height="64dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/colorBackground"
        android:fontFamily="@font/inter_bold"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="@color/ic_launcher_background"
        android:textColorHighlight="@color/colorOnPrimary"
        android:textColorHint="@color/colorOnBackground"
        android:textColorLink="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/cornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>